# ai-instruction-tape

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: ait_benchmark_v3.py  results_v3.md
examples/: multi_agent_tape.py
experiments/0_5b_tape_compiler/: COLAB.md  NEXT_RUN.md  README.md  analyze_errors.py  colab_lora_0_5b.ipynb  colab_lora_0_5b_curriculum.ipynb  colab_lora_0_5b_mixed.ipynb  evaluate_outputs.py  generate_dataset.py  human_eval_v1.jsonl  sample_eval.jsonl
src/ait/: __init__.py  agents.py  base36.py  cli.py  codec.py  core.py  dictionary.py  learner.py  meter.py
tests/: test_agents.py  test_codec.py  test_core.py  test_learner.py  test_meter.py
